updated nav section on hero

--- a/seaFood/index.html
+++ b/seaFood/index.html
@@ -25,11 +25,15 @@
     
 
         <div class="hero">
-            <ul>
-                <li><a href="#">Sea Food Info.</a></li>
-                <li><a href="#">Restaurants</a></li>
-                <li><a href="#">Fish Markets</a></li>
-            </ul>
+            <div class="box">
+                <div class="nav">
+                    <ul>
+                        <li><a href="#">Sea Food Info.</a></li>
+                        <li><a href="#">Restaurants</a></li>
+                        <li><a href="#">Fish Markets</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     
         <div class="newsLetter"></div>
