created restaurants page with all map locations

--- a/seaFood/restaurants.html
+++ b/seaFood/restaurants.html
@@ -6,10 +6,10 @@
     <title>SeaFood!</title>
 
     <link rel="stylesheet" href="css/reset.css" type="text/css">
-    <link rel="stylesheet" href="css/fMarket/main.css" type="text/css">
-    <link rel="stylesheet" href="css/fMarket/main.css" type="text/css">
-    <link rel="stylesheet" href="css/fMarket/gallery.css" type="text/css">
-    <link rel="stylesheet" href="css/fMarket/footer.css" type="text/css">
+    <link rel="stylesheet" href="css/restaurants/main.css" type="text/css">
+    <link rel="stylesheet" href="css/restaurants/main.css" type="text/css">
+    <link rel="stylesheet" href="css/restaurants/gallery.css" type="text/css">
+    <link rel="stylesheet" href="css/restaurants/footer.css" type="text/css">
 
 
     <style>
@@ -33,30 +33,28 @@
                     <ul>
                         <li><a href="#">SeaFood Info.</a></li>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Restaurants</a></li>
+                        <li><a href="fMarket.html">Fish Markets</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     
         <div class="content">
-            <h2>The top 10 Largest Fish Markets in the world!</h2>
+            <h2>The top 10 Seafood restaurants in the world!</h2>
             <div class="marketList">
                 <ol class="Left">
-                    <li><a href="https://www.tsukiji.or.jp/english/">1. Tsukiji Japan</a></li>
-                    <li><a href="http://cdmxtravel.com/en/attractions/la-nueva-viga-market.html">2. La Nueva Viga Mexico</a></li>
-                    <li><a href="https://www.sydneyfishmarket.com.au/">3. Sydney Fish Market</a></li>
-                    <li><a href="https://www.cityoflondon.gov.uk/supporting-businesses/business-support-and-advice
-                        /wholesale-markets/billingsgate-market/about-billingsgate-market">4. Billingsgate England</a></li>
-                    <li><a href="https://www.hamburg.com/sights/maritime/11747570/fish-market/">5. Hamburg Germany</a></li>
+                    <li><a href="https://www.hivebeachcafe.co.uk/">1. Hive Beach Café<br>Burton Bradstock, England </a></li>
+                    <li><a href="https://fiskebaren.dk/">2. Kødbyens Fiskebar<br>Copenhagen, Denmark</a></li>
+                    <li><a href="https://bacash.com.au/">3. Bacash<br>Melbourne, Australia</a></li>
+                    <li><a href="https://www.fiskeriet.net/#home-section">4. Fiskeriet<br>Oslo, Norway</a></li>
+                    <li><a href="http://www.osterialletestiere.it/">5. Alle Testiere<br>Venice, Italy</a></li>
                 </ol>
                 <ol class="Right">
-                    <li><a href="http://www.bcfm.co.kr/main/main.jsp">6. Busan Cooperative Korea</a></li>
-                    <li><a href="https://www.higab.se/projekt/projekt-feskekorka/">7. Feskekorka Sweden</a></li>
-                    <li><a href="https://newfultonfishmarket.com/">8. Fulton New York</a></li>
-                    <li><a href="https://www.fmo.org.hk/page?path=11_20_21&id=27">9. Aberdeen Hong Kong</a></li>
-                    <li><a href="https://www.englishintaiwan.com/
-                        shopping-in-taiwan/taipei-fish-market-fresh">10. Taipei Fish Market</a></li>
+                    <li><a href="https://www.le-bernardin.com/">6. Le Bernardin<br>NYC, US</a></li>
+                    <li><a href="https://lamarcebicheria.com/en/Lima">7. La Mar<br>Lima, Peru</a></li>
+                    <li><a href="https://www.sushi-jiro.jp/dining-at-jiro/">8. Sukiyabashi Jiro<br>Tokyo, Japan</a></li>
+                    <li><a href="http://www.esculaprestaurants.com/fish-restaurant-proto-dubrovnik/index.html">9. Proto<br>Dubrovnik, Croatia</a></li>
+                    <li><a href="https://www.chezleon.be/en/">10. Chez Leon<br>Brussels, Belgium</a></li>
                 </ol>
             </div>
             <h3></h3>
@@ -106,7 +104,7 @@
 
     </div> <!-- grid -->
 
-<script src="js/fMarket.js"></script>
+<script src="js/restaurant.js"></script>
 <script
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDp-mrLB3duXI7cDTLapj-czMt_xQvKnTI&callback=initMap&libraries=&v=weekly"
 defer
