added seaFoodInfo page

--- a/seaFood/fMarket.html
+++ b/seaFood/fMarket.html
@@ -31,9 +31,9 @@
             <div class="box">
                 <div class="nav">
                     <ul>
-                        <li><a href="#">SeaFood Info.</a></li>
+                        <li><a href="seaFoodInfo.html">SeaFood Info.</a></li>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Restaurants</a></li>
+                        <li><a href="restaurants.html">Restaurants</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,7 +43,7 @@
             <h2>The top 10 Largest Fish Markets in the world!</h2>
             <div class="marketList">
                 <ol class="Left">
-                    <li><a href="https://www.tsukiji.or.jp/english/">1. Tsukiji Japan</a></li>
+                    <li><a href="https://www.tsukiji.or.jp/english/">1. Toyosu Japan</a></li>
                     <li><a href="http://cdmxtravel.com/en/attractions/la-nueva-viga-market.html">2. La Nueva Viga Mexico</a></li>
                     <li><a href="https://www.sydneyfishmarket.com.au/">3. Sydney Fish Market</a></li>
                     <li><a href="https://www.cityoflondon.gov.uk/supporting-businesses/business-support-and-advice
