--- a/seaFood/index.html
+++ b/seaFood/index.html
@@ -31,7 +31,7 @@
             <div class="box">
                 <div class="nav">
                     <ul>
-                        <li><a href="#">SeaFood Info.</a></li>
+                        <li><a href="seaFoodInfo.html">SeaFood Info.</a></li>
                         <li><a href="restaurants.html">Restaurants</a></li>
                         <li><a href="fMarket.html">Fish Markets</a></li>
                     </ul>
