--- a/seaFood/fish.html
+++ b/seaFood/fish.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SeaFood!</title>
+    <title>Fish!</title>
 
     <link rel="stylesheet" href="css/reset.css" type="text/css">
-    <link rel="stylesheet" href="css/seaFoodinfo/main.css" type="text/css">
-    <link rel="stylesheet" href="css/seaFoodinfo/header.css" type="text/css">
-    <link rel="stylesheet" href="css/seaFoodinfo/main.css" type="text/css">
-    <link rel="stylesheet" href="css/seaFoodinfo/gallery.css" type="text/css">
-    <link rel="stylesheet" href="css/seaFoodinfo/footer.css" type="text/css">
+    <link rel="stylesheet" href="css/fish/main.css" type="text/css">
+    <link rel="stylesheet" href="css/fish/header.css" type="text/css">
+    <link rel="stylesheet" href="css/fish/main.css" type="text/css">
+    <link rel="stylesheet" href="css/fish/gallery.css" type="text/css">
+    <link rel="stylesheet" href="css/fish/footer.css" type="text/css">
 
 
     <style>
@@ -42,6 +42,7 @@
                 <div class="nav-mini">
                     <ul>
                         <li><a href="#">Sushi</a></li>
+                        <li><a href="seaFoodInfo.html">Seafood Info.</a></li>
                         <li><a href="#">Recipes</a></li>
                     </ul>
                 </div>
@@ -49,13 +50,12 @@
         </div>
 
         <div class="content">
-            <h2>General Information:</h2>
+            <h2>Species Information:</h2>
             <div class="seaLifeType">
                 <ul>
-                    <li><a href="#">Fish</a></li>
                     <li><a href="#">Crabs</a></li>
                     <li><a href="#">Shrimp</a></li>
-                    <li><a href="#">Lobsters</a></li>
+                    <li><a href="lobster.html">Lobsters</a></li>
                     <li><a href="#">Octopus</a></li>
                     <li><a href="#">Squid</a></li>
                 </ul>
