--- a/seaFood/lobster.html
+++ b/seaFood/lobster.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SeaFood!</title>
+    <title>Lobster!</title>
 
     <link rel="stylesheet" href="css/reset.css" type="text/css">
-    <link rel="stylesheet" href="css/seaFoodinfo/main.css" type="text/css">
-    <link rel="stylesheet" href="css/seaFoodinfo/header.css" type="text/css">
-    <link rel="stylesheet" href="css/seaFoodinfo/main.css" type="text/css">
-    <link rel="stylesheet" href="css/seaFoodinfo/gallery.css" type="text/css">
-    <link rel="stylesheet" href="css/seaFoodinfo/footer.css" type="text/css">
+    <link rel="stylesheet" href="css/lobster/main.css" type="text/css">
+    <link rel="stylesheet" href="css/lobster/header.css" type="text/css">
+    <link rel="stylesheet" href="css/lobster/main.css" type="text/css">
+    <link rel="stylesheet" href="css/lobster/gallery.css" type="text/css">
+    <link rel="stylesheet" href="css/lobster/footer.css" type="text/css">
 
 
     <style>
@@ -42,6 +42,7 @@
                 <div class="nav-mini">
                     <ul>
                         <li><a href="#">Sushi</a></li>
+                        <li><a href="seaFoodInfo.html">Seafood Info.</a></li>
                         <li><a href="#">Recipes</a></li>
                     </ul>
                 </div>
@@ -49,119 +50,92 @@
         </div>
 
         <div class="content">
-            <h2>General Information:</h2>
+            <h2>Species Information:</h2>
             <div class="seaLifeType">
                 <ul>
-                    <li><a href="#">Fish</a></li>
                     <li><a href="#">Crabs</a></li>
                     <li><a href="#">Shrimp</a></li>
-                    <li><a href="#">Lobsters</a></li>
+                    <li><a href="fish.html">Fish</a></li>
                     <li><a href="#">Octopus</a></li>
                     <li><a href="#">Squid</a></li>
                 </ul>
             </div>
-            <div class="fishContainer">
-                <div class="salmon">
-                    <h1>Salmon</h1>
-                    <div class="salPicture"></div>
-                    <div class="salmonType1">
+            <div class="lobsterContainer">
+                <div class="lobster1">
+                    <h1>Lobster</h1>
+                    <div class="lobPicture1"></div>
 
-                        <h1>1. King/Chinook</h1>
-                        <div class="salPic1"></div>
-                        <p>This salmon is deserving of its royal title. Many consider it to be the best salmon you can
-                            buy.<br>
-                            High in fat, rich, and large in size, King salmon (also known as Chinook) is loaded with
-                            omega-3s.<br><br>
+                    <div class="lobsterType1">
 
-                            King salmon have reached up to five feet in size and over 100 pounds in weight, showing up
-                            everywhere <br>
-                            from the Pacific waters of southern California to the freezing rivers of northern Alaska.
+                        <h1>1. Clawed Lobsters</h1>
+                        <div class="lobPic1"></div>
+                        <p>The clawed lobster is the most common kind and it is the one that comes to mind first.<br>
+                             They have three pairs of claws out of their total five pairs of limbs. These lobsters <br>
+                             are especially important for the fishing industry since they are the most widely consumed<br>
+                              ones, and they are the ones you expect to be served on a platter when you order in a <br>
+                              fancy restaurant.<br><br>
+
+                            This type includes European and American lobsters.
                         </p>
                     </div>
 
-                    <div class="salmonType2">
+                    <div class="lobsterType2">
 
-                        <h1>2. Sockeye/Red</h1>
-                        <div class="salPic2"></div>
-                        <p>Sockeye salmon, or red salmon, is known for its striking red-orange flesh and strong
-                            scent.<br>
-                            It's said to have a richer flavor, or what some might describe as "fishier."<br><br>
-
-                            They're smaller and leaner than Kings, and a lot cheaper too. Sockeye salmon is often sold
-                            smoked,<br>
-                            and are a favorite among chefs across the country. Not only do they get their name for
-                            bright red flesh,<br>
-                            but their skin also turns a deep red as they swim upstream to spawn. They're mostly caught
-                            in Alaskan waters.
+                        <h1>2. Reef Lobsters</h1>
+                        <div class="lobPic2"></div>
+                        <p>Reef lobsters belong to the genus Enoplometopus, which has 11 species in all. While reef lobsters<br>
+                             are also a clawed variety, they are different from clawed lobsters; instead of having claws on <br>
+                             three limbs, these lobsters only have one large set of claws on the first one. They are strikingly<br>
+                              colored, with some even sporting purple or lavender markings.
                         </p>
                     </div>
 
-                    <div class="salmonType3">
+                    <div class="lobsterType3">
 
-                        <h1>3. Coho/Silver</h1>
-                        <div class="salPic3"></div>
-                        <p>Coho or silver salmon get their name for their bright silver skin. Although they don't get
-                            the attention <br>
-                            that massive Kings and flavorful Sockeyes do, Coho has a medium fat-content and a more
-                            subtle flavor.<br><br>
+                        <h1>3. Spiny Lobsters</h1>
+                        <div class="lobPic3"></div>
+                        <p>This broad category is reserved for all lobsters that lack claws on the front of their bodies, and <br>
+                            several species come under this genre. These crustaceans are easily recognizable because of their <br>
+                            very thick and oversized antennae; this is where the word ‘spiny’ comes from.<br><br>
 
-                            Because of their small size, Cohos are often used when cooking a whole salmon. Their flavor
-                            is similar to Kings, <br>
-                            but Cohos are more delicate in texture. They're commonly found in Alaskan waters and much of
-                            the northern Pacific.
+                            These crustaceans are nocturnal in nature and feed on algae, snails, crabs, and other small creatures<br> 
+                            that dwell on the bottom of the ocean floor. If they are present, it means that the ecology around them<br>
+                             is sure to be healthy and diverse.<br><br>
+
+                            Spiny lobsters are best known for their mass migration after rainstorms at their place of habitation.
                         </p>
                     </div>
 
-                    <div class="salmonType4">
+                    <div class="lobsterType4">
 
-                        <h1>4. Pink/Humpback</h1>
-                        <div class="salPic4"></div>
-                        <p>This salmon goes by pink, humpback, or even "humpies" because they have a distinctive hump on
-                            their back that develops<br>
-                            when they spawn, as well as a light-colored flesh. They're mild in flavor and low in fat and
-                            size, typically weighing <br>
-                            between two and six pounds.<br><br>
-
-                            Although they can be found fresh and frozen, they're typically processed and sold in cans or
-                            pouches. Most pink salmon is <br>
-                            harvested from Alaskan fisheries, but they can also be found on the coasts of Washington and
-                            Oregon. Fun fact: U.S. fishermen <br>
-                            harvested more pink salmon than all other fish in 2017, all 495 million pounds of them.
+                        <h1>4. Slipper Lobsters</h1>
+                        <div class="lobPic4"></div>
+                        <p>In slipper lobsters, the front claws are lacking while the antennae are enlarged. Because of their flattened<br>
+                             look, it seems like their faces have been squashed. These lobsters hide under the mud during day time instead<br>
+                              of lounging in crevices like others, and because of this quality, they are not favored much as food.
                         </p>
                     </div>
 
-                    <div class="salmonType5">
+                    <div class="lobsterType5">
 
-                        <h1>5. Chum/Silverbrite/Keta/Dog</h1>
-                        <div class="salPic5"></div>
-                        <p>Chum salmon goes by many names. This light to medium-colored fish has a lower fat content and
-                            smaller size. It's flesh is often sold <br>
-                            canned or frozen.<br><br>
-
-                            However, it does have one big thing going for it: its roe. Roe, or fish eggs contained in
-                            the ovaries of a female fish, is considered a <br>
-                            delicacy in many cuisines. Chum's roe is often bigger and tastier than other types of
-                            salmon. It's often used for Ikura (salmon caviar).<br>
-
-                            Chum salmon is mostly harvested from Alaskan waters.
+                        <h1>5. Furry Lobsters</h1>
+                        <div class="lobPic5"></div>
+                        <p>One of the main characteristics that give furry lobsters their name is the hair-like protrusions on their<br>
+                             bodies that look like actual hair from a distance. These lobsters have large antennae but are small themselves,<br>
+                              which makes them stealthy and so they are able to evade most lobster traps.
                         </p>
                     </div>
 
-                    <div class="salmonType6">
+                    <div class="lobsterType6">
 
-                        <h1>6. Atlantic/Salmo Salar</h1>
-                        <div class="salPic6"></div>
-                        <p>And finally, the only salmon that doesn't hail from the Pacific ocean is, of course, Atlantic
-                            salmon. However, <br>
-                            all commercially available Atlantic salmon is farmed. This is because only small, endangered
-                            populations live <br>
-                            in the wild today. Atlantic salmon tends to be more mild in flavor, but often larger in size
-                            due to their <br>
-                            specialized diet.<br><br>
+                        <h1>6. Squat Lobsters</h1>
+                        <div class="lobPic6"></div>
+                        <p>A unique mix of lobster and shrimp, squat lobsters are not ‘true’ lobsters; they are closer in the family tree to <br>
+                            other crustaceans like crabs and hermit crabs. They find their homes in the various cracks and crevices of rocks, <br>
+                            but they do dig into sand to find food.<br><br>
 
-                            However, fish farming is starting to see improvements as fisheries moved towards more
-                            plant-based feeds. Because <br>
-                            it's farm-raised, Atlantic salmon also tends to be cheaper than most wild salmon.
+                            What makes them especially interesting is the variety and diversity it shows in its coloring. Although there are hundreds<br>
+                             of species of squat lobsters, one of the most famous ones is the ‘yeti crab.’
                         </p>
                     </div>
 
