created crab page

--- a/seaFood/fish.html
+++ b/seaFood/fish.html
@@ -53,7 +53,7 @@
             <h2>Species Information:</h2>
             <div class="seaLifeType">
                 <ul>
-                    <li><a href="#">Crabs</a></li>
+                    <li><a href="crabs.html">Crabs</a></li>
                     <li><a href="#">Shrimp</a></li>
                     <li><a href="lobster.html">Lobsters</a></li>
                     <li><a href="#">Octopus</a></li>
