--- a/seaFood/seaFoodInfo.html
+++ b/seaFood/seaFoodInfo.html
@@ -52,10 +52,10 @@
             <h2>General Information:</h2>
             <div class="seaLifeType">
                 <ul>
-                    <li><a href="#">Fish</a></li>
+                    <li><a href="fish.html">Fish</a></li>
                     <li><a href="#">Crabs</a></li>
                     <li><a href="#">Shrimp</a></li>
-                    <li><a href="#">Lobsters</a></li>
+                    <li><a href="lobster.html">Lobsters</a></li>
                     <li><a href="#">Octopus</a></li>
                     <li><a href="#">Squid</a></li>
                 </ul>
