shrimp added and octopus started

--- a/seaFood/fish.html
+++ b/seaFood/fish.html
@@ -54,7 +54,7 @@
             <div class="seaLifeType">
                 <ul>
                     <li><a href="crabs.html">Crabs</a></li>
-                    <li><a href="#">Shrimp</a></li>
+                    <li><a href="shrimp.html">Shrimp</a></li>
                     <li><a href="lobster.html">Lobsters</a></li>
                     <li><a href="#">Octopus</a></li>
                     <li><a href="#">Squid</a></li>
