--- a/seaFood/lobster.html
+++ b/seaFood/lobster.html
@@ -53,8 +53,8 @@
             <h2>Species Information:</h2>
             <div class="seaLifeType">
                 <ul>
-                    <li><a href="#">Crabs</a></li>
-                    <li><a href="#">Shrimp</a></li>
+                    <li><a href="crabs.html">Crabs</a></li>
+                    <li><a href="shrimp.html">Shrimp</a></li>
                     <li><a href="fish.html">Fish</a></li>
                     <li><a href="#">Octopus</a></li>
                     <li><a href="#">Squid</a></li>
