created and completed squid page

--- a/seaFood/shrimp.html
+++ b/seaFood/shrimp.html
@@ -56,7 +56,7 @@
                     <li><a href="lobster.html">Lobsters</a></li>
                     <li><a href="crabs.html">Crabs</a></li>
                     <li><a href="fish.html">Fish</a></li>
-                    <li><a href="#">Octopus</a></li>
+                    <li><a href="octopus.html">Octopus</a></li>
                     <li><a href="#">Squid</a></li>
                 </ul>
             </div>
