--- a/seaFood/crabs.html
+++ b/seaFood/crabs.html
@@ -54,9 +54,9 @@
             <div class="seaLifeType">
                 <ul>
                     <li><a href="lobster.html">Lobsters</a></li>
-                    <li><a href="#">Shrimp</a></li>
+                    <li><a href="shrimp.html">Shrimp</a></li>
                     <li><a href="fish.html">Fish</a></li>
-                    <li><a href="#">Octopus</a></li>
+                    <li><a href="octopus.html">Octopus</a></li>
                     <li><a href="#">Squid</a></li>
                 </ul>
             </div>
