--- a/seaFood/octopus.html
+++ b/seaFood/octopus.html
@@ -57,7 +57,7 @@
                     <li><a href="crabs.html">Crabs</a></li>
                     <li><a href="fish.html">Fish</a></li>
                     <li><a href="shrimp.html">Shrimp</a></li>
-                    <li><a href="#">Squid</a></li>
+                    <li><a href="squid.html">Squid</a></li>
                 </ul>
             </div>
             <div class="octopusContainer">
