added food side dish list

--- a/seaFood/seaFoodInfo.html
+++ b/seaFood/seaFoodInfo.html
@@ -48,7 +48,12 @@
             </div>
         </div>
 
+
+
+
         <div class="content">
+
+
             <h2>Species Information:</h2>
             <div class="seaLifeType">
                 <ul>
@@ -57,9 +62,70 @@
                     <li><a href="shrimp.html">Shrimp</a></li>
                     <li><a href="lobster.html">Lobsters</a></li>
                     <li><a href="octopus.html">Octopus</a></li>
-                    <li><a href="#">Squid</a></li>
+                    <li><a href="squid.html">Squid</a></li>
                 </ul>
             </div>
+
+            <div class="sideFoodContainer">
+                <div class="sideFood">
+
+                    <div class="sideHeader">Seafood Pairing List</div>
+
+                    <div class="side1">
+                        <h1>Grilled or Sautéed Vegetables</h1>
+                            <div class="sidePic1"></div>
+                    </div>
+
+                    <div class="side2">
+                        <h1>Leafy Greens</h1>
+                            <div class="sidePic2"></div>
+                    </div>
+
+                    <div class="side3">
+                        <h1>Macaroni Salad</h1>
+                            <div class="sidePic3"></div>
+                    </div>
+
+                    <div class="side4">
+                        <h1>Pesto Zoodles</h1>
+                            <div class="sidePic4"></div>
+                    </div>
+
+                    <div class="side5">
+                        <h1>Greek Veggie Salad</h1>
+                            <div class="sidePic5"></div>
+                    </div>
+
+                    <div class="side6">
+                        <h1>Grilled Kabobs</h1>
+                            <div class="sidePic6"></div>
+                    </div>
+
+                    <div class="side7">
+                        <h1>Couscous Primavera</h1>
+                            <div class="sidePic7"></div>
+                    </div>
+
+                    <div class="side8">
+                        <h1>Mango Guacamole</h1>
+                            <div class="sidePic8"></div>
+                    </div>
+
+                    <div class="side9">
+                        <h1>Pascagoula Potato Salad</h1>
+                            <div class="sidePic9"></div>
+                    </div>
+
+                    <div class="side10">
+                        <h1>Caesar Salad</h1>
+                            <div class="sidePic10"></div>
+                    </div>
+
+
+                </div>
+            </div>
+
+
             <div class="fishContainer">
                 <div class="salmon">
                     <h1>Fish Dipping Sauces</h1>
@@ -503,10 +569,8 @@
 
 
                     </div>
-
-
                 </div>
-            </div>
+    </div>
         </div>
 
         <div class="newsLetter">
@@ -548,5 +612,7 @@
         </div>
 
     </div> <!-- grid -->
+
+    <script src="js/seaFoodInfo.js"></script>
 </body>
 </html>
