--- a/seaFood/fish.html
+++ b/seaFood/fish.html
@@ -37,14 +37,17 @@
 
             <nav class="nav-main">
                 <div class="btn-toggle-nav" onclick="toggleNav()"></div>
+                <div class="centerLogo">
                     SEAFOOD
                     <div class="fish"></div>
                     GUIDE
+                </div>
+                <div class="invisible">d</div>
             </nav>
 
             <aside class="nav-sidebar">
                 <ul>
-                    <li><span>Royal Items:</span></li>
+                    <li><span>Species Info:</span></li>
                     <li><a href="fish.html">Fish</a></li>
                     <li><a href="crabs.html">Crabs</a></li>
                     <li><a href="shrimp.html">Shrimp</a></li>
