updated crab lobster shrimp octo on nav, buttons and collapsable

--- a/seaFood/fish.html
+++ b/seaFood/fish.html
@@ -26,11 +26,11 @@
 <body>
 
     <div class="grid">
-        <div class="logo">SEAFOOD
+        <!-- <div class="logo">SEAFOOD
             <div class="fish"></div>
             GUIDE
-        </div>
-
+        </div> -->
+        <!-- <div class="fish"></div> -->
 
         <div class="hero">
 
