--- a/seaFood/lobster.html
+++ b/seaFood/lobster.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/lobster/main.css" type="text/css">
     <link rel="stylesheet" href="css/lobster/gallery.css" type="text/css">
     <link rel="stylesheet" href="css/lobster/footer.css" type="text/css">
+    <link rel="stylesheet" href="css/lobster/nav.css" type="text/css">
 
 
     <style>
@@ -24,13 +25,35 @@
 
     <div class="grid">
 
-        <div class="logo">SEAFOOD
+        <!-- <div class="logo">SEAFOOD
             <div class="fish"></div>
             GUIDE
-        </div>
+        </div> -->
 
 
         <div class="hero">
+
+            <nav class="nav-main">
+                <div class="btn-toggle-nav" onclick="toggleNav()"></div>
+                <div class="centerLogo">
+                    SEAFOOD
+                    <div class="fish"></div>
+                    GUIDE
+                </div>
+                <div class="invisible">d</div>
+            </nav>
+
+            <aside class="nav-sidebar">
+                <ul>
+                    <li><span>Species Info:</span></li>
+                    <li><a href="fish.html">Fish</a></li>
+                    <li><a href="crabs.html">Crabs</a></li>
+                    <li><a href="shrimp.html">Shrimp</a></li>
+                    <li><a href="octopus.html">Octopus</a></li>
+                    <li><a href="squid.html">Squid</a></li>
+                </ul>
+            </aside>
+
             <div class="box">
                 <div class="nav">
                     <ul>
@@ -42,7 +65,7 @@
                 <div class="nav-mini">
                     <ul>
                         <li><a href="#">Sushi</a></li>
-                        <li><a href="seaFoodInfo.html">Seafood Info.</a></li>
+                        <li><a href="seaFoodInfo.html">Seafood Info</a></li>
                         <li><a href="#">Recipes</a></li>
                     </ul>
                 </div>
@@ -50,7 +73,7 @@
         </div>
 
         <div class="content">
-            <h2>Species Information:</h2>
+            <!-- <h2>Species Information:</h2>
             <div class="seaLifeType">
                 <ul>
                     <li><a href="crabs.html">Crabs</a></li>
@@ -59,8 +82,12 @@
                     <li><a href="octopus.html">Octopus</a></li>
                     <li><a href="squid.html">Squid</a></li>
                 </ul>
-            </div>
+            </div> -->
             <div class="lobsterContainer">
+
+                <button type="button" class="collapsible">Clawed Lobsters</button>
+                <div class="content2">
+
                 <div class="lobster1">
                     <h1>Lobster</h1>
                     <div class="lobPicture1"></div>
@@ -79,7 +106,11 @@
                             This type includes European and American lobsters.
                         </p>
                     </div>
+                </div>
 
+            </div>
+            <button type="button" class="collapsible">Reef Lobsters</button>
+            <div class="content2">
                     <div class="lobsterType2">
 
                         <h1>2. Reef Lobsters</h1>
@@ -93,7 +124,11 @@
                             colored, with some even sporting purple or lavender markings.
                         </p>
                     </div>
+                </div>
 
+
+                <button type="button" class="collapsible">Spiny Lobsters</button>
+                <div class="content2">
                     <div class="lobsterType3">
 
                         <h1>3. Spiny Lobsters</h1>
@@ -114,7 +149,11 @@
                             habitation.
                         </p>
                     </div>
+                </div>
 
+
+                    <button type="button" class="collapsible">Slipper Lobsters</button>
+                    <div class="content2">
                     <div class="lobsterType4">
 
                         <h1>4. Slipper Lobsters</h1>
@@ -127,7 +166,11 @@
                             as food.
                         </p>
                     </div>
+                </div>
 
+
+                    <button type="button" class="collapsible">Furry Lobsters</button>
+                    <div class="content2">
                     <div class="lobsterType5">
 
                         <h1>5. Furry Lobsters</h1>
@@ -139,7 +182,11 @@
                             which makes them stealthy and so they are able to evade most lobster traps.
                         </p>
                     </div>
+                </div>
 
+
+                    <button type="button" class="collapsible">Squat Lobsters</button>
+                    <div class="content2">
                     <div class="lobsterType6">
 
                         <h1>6. Squat Lobsters</h1>
@@ -155,10 +202,11 @@
                             of species of squat lobsters, one of the most famous ones is the ‘yeti crab.’
                         </p>
                     </div>
+                </div>
 
                 </div>
             </div>
-            </div>
+            
 
 
 
@@ -200,6 +248,8 @@
             </div>
         </div>
 
+    </div>
     </div> <!-- grid -->
+    <script src="js/lobster.js"></script>
 </body>
 </html>
